...
            [externalConstraints addObject:constraint];
        }
    }
    [NSLayoutConstraint deactivateConstraints:externalConstraints];

    UIScrollView *scrollView = [[UIScrollView alloc] initWithFrame:CGRectZero];
    scrollView.accessibilityIdentifier = @"demo.property.scroll";
    scrollView.alwaysBounceVertical = YES;
    scrollView.directionalLockEnabled = YES;
    scrollView.delegate = self;
    if (@available(iOS 11.0, *)) {
        scrollView.contentInsetAdjustmentBehavior = UIScrollViewContentInsetAdjustmentNever;
    }
...
    }
    self.settingsScrollView.contentSize = CGSizeMake(scrollWidth, rowY);
}

- (void)configurePropertyPageAccessibility {
    NSArray<NSString *> *identifiers = @[
        @"demo.property.backgroundColor.switch",
        @"demo.property.backgroundImage.switch",
        @"demo.property.tintColor.switch",
        @"demo.property.largeTitle.switch",
        @"demo.property.statusBarStyle.switch",
        @"demo.property.itemSize.switch",
        @"demo.property.itemMargin.switch",
        @"demo.property.gradient.switch",
        @"demo.property.systemNavigation.switch",
        @"demo.property.secondaryAction.switch",
        @"demo.property.disablePop.switch"
    ];
    NSArray<NSString *> *labels = @[
        @"Use orange navigation background",
        @"Use navigation background image",
        @"Use yellow navigation tint",
        @"Use large title style",
...
- (void)setUpGeometryProbe {
    UILabel *probe = [[UILabel alloc] initWithFrame:CGRectMake(0, 0, 1, 1)];
    probe.text = @" ";
    probe.textColor = UIColor.clearColor;
    probe.backgroundColor = UIColor.clearColor;
    probe.isAccessibilityElement = YES;
    probe.accessibilityIdentifier = @"demo.property.geometry";
    probe.accessibilityLabel = @"Property page geometry";
    probe.userInteractionEnabled = NO;
    [self.view addSubview:probe];
    self.geometryProbe = probe;
}

...
